--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
         android:theme="@style/Theme.Tourinkorea"
         android:usesCleartextTraffic="true"
         tools:targetApi="34">
-        <activity
-            android:name=".ui.detail.DetailActivity"
-            android:exported="false" />
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="2bbbb435fd5a8865e97e0ec4dad9cba6" />
+
+        <activity android:name=".ui.detail.DetailActivity" />
         <activity android:name=".ui.write.WriteActivity" />
         <activity
             android:name=".MainActivity"
