--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="29" />
 
     <application
         android:name=".TourInKoreaApplication"
@@ -20,7 +24,7 @@
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="2bbbb435fd5a8865e97e0ec4dad9cba6" />
-
+        <activity android:name=".ui.download.DownloadActivity"/>
         <activity android:name=".ui.detail.DetailActivity" />
         <activity android:name=".ui.write.WriteActivity" />
         <activity
