feat: 로그인 기능 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,8 @@
         android:theme="@style/Theme.Tourinkorea"
         android:usesCleartextTraffic="true"
         tools:targetApi="34">
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="2bbbb435fd5a8865e97e0ec4dad9cba6" />
-        <activity android:name=".ui.download.DownloadActivity"/>
-        <activity android:name=".ui.detail.DetailActivity" />
-        <activity android:name=".ui.write.WriteActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.sign.SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,6 +30,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="2bbbb435fd5a8865e97e0ec4dad9cba6" />
+
+        <activity android:name=".ui.download.DownloadActivity" />
+        <activity android:name=".ui.detail.DetailActivity" />
+        <activity android:name=".ui.write.WriteActivity" />
+        <activity android:name=".MainActivity" />
+
     </application>
 
 </manifest>
